--- a/index.html
+++ b/index.html
@@ -3,9 +3,75 @@
   <head>
     <meta charset="utf-8">
     <title>Dog Party</title>
-    <link rel="stylesheet" href="./stylesheets/css/master.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/css/master.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
   </head>
   <body>
-
+    <header>
+      <img src="images/dog-icon.svg" alt="Dog shaped icon">
+      <div>
+        <div>
+          <a href="#">
+            How
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            What
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            Facts
+          </a>
+        </div>
+      </div>
+    </header>
+    <div class="background-img-container">
+      <div class="background-img">
+        <img class="clipped" src="images/park.jpg" alt="Park at sunrise">
+      </div>
+      <p>A Site About Some Dogs</p>
+      <img class="second-clipped" src="images/dog1-sq.jpg" alt="Goofy looking pitbull with bandanna">
+      <div id="button">
+        <button type=button>What are Dogs</button>
+      </div>
+    </div>
+    <div class="body-container">
+      <div id="pitbull-container">
+        <p>How</p>
+        <img src="images/dog2-sq.jpg" alt="Square jawed pitbull looking up">
+        <p>Cat ass trophy pee in the shoe. Try to jump onto window and fall while scratching at wall paw at beetle and eat it before it gets away throwup on your pillow sleep in the bathroom sink pushes butt to face but scoot butt on the rug. Licks paws. Sleep in the bathroom sink stare at guinea pigs so jump around on couch, meow constantly until given food, the dog smells bad and push your water glass on the floor. Ignore the squirrels, you'll never catch them anyway sleep on dog bed, force dog to sleep on floor, refuse to drink water except out of someone's glass.</p>
+        <button type=button>How to Dog</button>
+      </div>
+      <div id="collie-container">
+        <p>What</p>
+        <img src="images/dog3-sq.jpg" alt="Square jawed pitbull looking up">
+        <p>Give me some of your food give me some of your food give me some of your food meh, i don't want it i show my fluffy belly but it's a trap! if you pet it i will tear up your hand or cat slap dog in face. Lick butt and make a weird face ignore the squirrels, you'll never catch them anyway and cat slap dog in face and peer out window, chatter at birds, lure them to mouth. Chew on cable cat not kitten around so give attitude flee in terror at cucumber discovered on floor so scratch. Put toy mouse in food bowl run out of litter box at full speed terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry meow loudly just to annoy owners.</p>
+        <button type=button>What is Dog</button>
+      </div>
+      <div id="pitbull-mix-container">
+        <p>Facts</p>
+        <img src="images/dog4-sq.jpg" alt="Square jawed pitbull looking up">
+        <p>Lick butt and make a weird face fall asleep upside-down if human is on laptop sit on the keyboard. Chase the pig around the house lick the plastic bag peer out window, chatter at birds, lure them to mouth and chill on the couch table scratch the postman wake up lick paw wake up owner meow meow attack dog, run away and pretend to be victim. I can haz attack feet refuse to come home when humans are going to bed; stay out all night then yowl like i am dying at 4am and scratch the box.</p>
+        <button type=button>Dog Facts</button>
+      </div>
+    </div>
+    <footer>
+      <div>
+        <p>Learn About Dogs Online</p>
+      </div>
+      <div>
+        <div class="icon-container">
+            <img src="images/facebook.svg" alt="Dog shaped icon">
+            <img src="images/twitter.svg" alt="Dog shaped icon">
+            <img src="images/instagram.svg" alt="Dog shaped icon">
+            <img id="last-icon" src="images/linkedin.svg" alt="Dog shaped icon">
+        </div>      
+      </div>
+      <a href="#"> 
+        See this on GitHub
+      </a>
+    </footer>
   </body>
 </html>
